<resources>
    <string name="app_name">时课</string>

    <string name="LinearLayoutManager">LinearLayoutManager</string>
    <string name="GridLayoutManager">GridLayoutManager</string>
    <string name="StaggeredGridLayoutManager">StaggeredGridLayoutManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="nickname">昵称</string>
    <string name="my_class">我的课程</string>
    <string name="my_file">我的文件</string>
    <string name="my_sign_in">我的签到</string>
    <string name="my_rank">签到排行榜</string>
    <string name="start_sign_in">立即\n签到</string>
    <string name="see_sign_in_list">查看签到表</string>

    <string name="Sunday">周日</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="sign_in">登录</string>
    <string name="shike">时课</string>
    <string name="studentId">学号</string>
    <string name="about">关于</string>

    <string name="shortcut_long_label1">shortcut_long_label1</string>
    <string name="shortcut_long_label2">shortcut_long_label2</string>

    <string name="shortcut_disabled_message1">shortcut_disabled_message1</string>
    <string name="shortcut_disabled_message2">shortcut_disabled_message2</string>
    <string name="import_class">导入课程</string>
    <string name="academic_year">学年</string>
    <string name="term">学期</string>
    <string name="faculty">学院</string>
    <string name="grade">年级</string>
    <string name="school_class">班级</string>
    <string name="name">姓名</string>
    <string name="add_class">添加课程</string>

</resources>
