<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_class"
            android:icon="@drawable/icon_class"
            android:title="@string/my_class" />
        <item
            android:id="@+id/my_file"
            android:icon="@drawable/icon_file"
            android:title="@string/my_file" />
        <item
            android:id="@+id/my_sign_in"
            android:icon="@drawable/icon_sign_in"
            android:title="@string/my_sign_in" />
        <item
            android:id="@+id/my_rank"
            android:icon="@drawable/icon_rank"
            android:title="@string/my_rank" />

        <item
            android:icon="@drawable/icon_nav"
            android:title="关于" />
    </group>


</menu>
